--- a/src/partials/main-body.html
+++ b/src/partials/main-body.html
@@ -2,7 +2,7 @@
     <div class="service wrapper">
         <div class="service-row col_1">
 
-            <div class="service-col col_1_3">
+            <div class="service-col">
                 <div class="pod-text">
                     <div class="service-text">Юридические услуги</div>
                 </div>
@@ -22,7 +22,7 @@
                     <span>От <b>5 000</b> рублей</span>
                 </div>
             </div>
-            <div class="service-col col_1_3">
+            <div class="service-col">
                 <div class="pod-text">
                     <div class="service-text">менеджер по безопасности</div>
                 </div>
@@ -38,7 +38,7 @@
                     <span>От <b>10 000</b> рублей</span>
                 </div>
             </div>
-            <div class="service-col col_1_3">
+            <div class="service-col">
                 <div class="pod-text">
                     <div class="service-text" align="middle">информационные услуги</div>
                 </div>
@@ -180,7 +180,7 @@
         <div class="otz-col">
             <div class="portrets">
                 <div class="img">
-                    <img src="images/photo.jpg" alt="user">
+                    <img src="images/portret.png" alt="user">
                 </div>
             </div>
             <div class="profession">
