--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -6,42 +6,55 @@
                 Наши <span>клиенты</span>
             </div>
             <div id="slider">
-                <div class="logos wrapper" >
-                    <a href="#"><img src="images/megafon.png" alt="megafon"></a>
-                    <a href="#"><img src="images/stockman.png" alt="stockman"></a>
-                    <a href="#"><img src="images/timepad.png" alt="timepad"></a>
-                    <a href="#"><img src="images/olympus.png" alt="olympus"></a>
-                    <a href="#"><img src="images/sberbank.png" alt="sberbank"></a>
-                    <a href="#"><img src="images/visa.png" alt="visa"></a>
 
+                    <div class="wraper-it">
+                        <a href="#">
+                            <img class="raz" src="images/logos/megafon_color.png" alt="megafon">
+                            <img class="dva" src="images/logos/megafon.png" alt="megafon">
+                        </a>
+                    </div>
+                    <div class="wraper-it">
+                        <a href="#">
+                            <img class="raz" src="images/logos/stockmann_color.png" alt="stockman">
+                            <img class="dva" src="images/logos/stockmann.png" alt="stockman">
+                        </a>
+                        </div>
+                    <div class="wraper-it">
+                        <a href="#">
+                            <img class="raz" src="images/logos/timepad_color.png" alt="timepad">
+                            <img class="dva" src="images/logos/timepad.png" alt="timepad">
+                        </a>
+                    </div>
+                    <div class="wraper-it">
+                        <a href="#">
+                            <img class="raz" src="images/logos/olympus_color.png" alt="olympus">
+                            <img class="dva" src="images/logos/olympus.png" alt="olympus">
+                        </a>
+                    </div>
+                    <div class="wraper-it">
+                        <a href="#">
+                            <img class="raz" src="images/logos/sberbank_color.png" alt="sberbank">
+                            <img class="dva" src="images/logos/sberbank.png" alt="sberbank">
+                        </a>
+                    </div>
+                    <div class="wraper-it">
+                        <a href="#">
+                            <img class="raz" src="images/logos/visa_color.png" alt="visa">
+                            <img class="dva" src="images/logos/visa.png" alt="visa">
+                        </a>
+                    </div>
+                <div class="wraper-it">
+                    <a href="#">
+                        <img class="raz" src="images/logos/megafon_color.png" alt="megafon">
+                        <img class="dva" src="images/logos/megafon.png" alt="megafon">
+                    </a>
                 </div>
-                <div class="logos wrapper" >
-                    <a href="#"><img src="images/megafon.png" alt="megafon"></a>
-                    <a href="#"><img src="images/stockman.png" alt="stockman"></a>
-                    <a href="#"><img src="images/timepad.png" alt="timepad"></a>
-                    <a href="#"><img src="images/olympus.png" alt="olympus"></a>
-                    <a href="#"><img src="images/sberbank.png" alt="sberbank"></a>
-                    <a href="#"><img src="images/visa.png" alt="visa"></a>
 
-                </div>
-                <div class="logos wrapper" >
-                    <a href="#"><img src="images/megafon.png" alt="megafon"></a>
-                    <a href="#"><img src="images/stockman.png" alt="stockman"></a>
-                    <a href="#"><img src="images/timepad.png" alt="timepad"></a>
-                    <a href="#"><img src="images/olympus.png" alt="olympus"></a>
-                    <a href="#"><img src="images/sberbank.png" alt="sberbank"></a>
-                    <a href="#"><img src="images/visa.png" alt="visa"></a>
 
-                </div>
-                <div class="logos wrapper" >
-                    <a href="#"><img src="images/megafon.png" alt="megafon"></a>
-                    <a href="#"><img src="images/stockman.png" alt="stockman"></a>
-                    <a href="#"><img src="images/timepad.png" alt="timepad"></a>
-                    <a href="#"><img src="images/olympus.png" alt="olympus"></a>
-                    <a href="#"><img src="images/sberbank.png" alt="sberbank"></a>
-                    <a href="#"><img src="images/visa.png" alt="visa"></a>
 
-                </div>
+
+
+
             </div>
 
         </div>
