--- a/src/sass/zdev_1_adapt.scss
+++ b/src/sass/zdev_1_adapt.scss
@@ -72,11 +72,15 @@
 }
 
 @media screen and (max-width: 666px){
+  .articles-row {flex-direction: column;
+    .articles-text {margin-top: 15px;}}
   .medals-item {
     width: 100%;
   }
   .medal-2-img{ margin-top: 15px;}
 }
+
+
 @media screen and (max-width: 637px){
  .bot-col-4 {
    display: flex;
