yslygi.html примастив виїжджалку

--- a/src/partials/hidden-block.html
+++ b/src/partials/hidden-block.html
@@ -42,7 +42,7 @@
                 <textarea type="text"  name="contact_text" required="required" placeholder="Ваш комментарий..."></textarea>
             </div>
             <div class="form-row">
-                <button class="send">оправить заявку</button>
+                <button class="send">отправить отзыв</button>
             </div>
         </form>
     </div>
