--- a/src/partials/yslygi-body.html
+++ b/src/partials/yslygi-body.html
@@ -9,11 +9,40 @@
     </div>
     <div class="manager wrapper">
         <div class="rows">
-        <span class="cols"><span>Обеспечение юридической и экономической <br>
-            безопасности Вашей компании</span></span>
-            <span class="cols">Решение проблем физических и юридических лиц<br>
-            в режиме 24/7</span>
+
+        <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Обеспечение юридической и экономической <br>
+                          безопасности Вашей компании
+                    </span></span>
+                    <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                             dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                             Excepteur sint occaecat cupidatat non proident
+                <a href="#">
+                    <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                </a>
+            </div>
         </div>
+        <div class="boroda">
+            <span class="cols pynkt">Решение проблем физических и юридических лиц<br>
+            в режиме 24/7</span>
+
+            <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident
+                <a href="#">
+                    <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                </a>
+            </div>
+
+        </div>
+
+        </div>
+
     </div>
 
     <div class="wrapper">
@@ -21,32 +50,116 @@
     </div>
     <div class="manager wrapper">
         <div class="rows" style="margin-bottom: 28px;">
-            <span class="cols"><span>Абонентское обслуживание</span></span>
-            <span class="cols">Судебно-арбитражная практика</span>
-        </div>
-        <div class="rows" style=" margin: -30px auto;">
-            <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
-                <a href="#"><div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div></a>
+
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Абонентское обслуживание</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
             </div>
-            <div class="coll"></div>
+
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Судебно-арбитражная практика</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
         </div>
 
 
         <div class="rows">
-            <span class="cols"><span>Экспертиза и составление договоров</span></span>
-            <span class="cols">Адвокатские услуги</span>
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Экспертиза и составление договоров</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Адвокатские услуги</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
         </div>
 
 
         <div class="rows">
-            <span class="cols"><span>Сопровождение сделок с недвижимостью</span></span>
-            <span class="cols">Участие в переговорах</span>
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Сопровождение сделок с недвижимостью</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Участие в переговорах</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
+
+
         </div>
 
         <div class="rows">
-        <span class="cols"><span>Представительство в государственных органах<br>
-и взаимодействие с ними</span></span>
-            <div class="coll"></div>
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Представительство в государственных органах<br>
+                        и взаимодействие с ними</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="coll-hide"></div>
 
         </div>
     </div>
@@ -56,19 +169,85 @@
     </div>
     <div class="manager wrapper">
         <div class="rows">
-            <span class="cols"><span>Комплексная проверка физических и юридических лиц</span></span>
-            <span class="cols">Проверка персонала и соискателей</span>
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Комплексная проверка физических и юридических лиц</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Проверка персонала и соискателей</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
+
         </div>
 
         <div class="rows">
-        <span class="cols"><span>Проверка контрагентов (партнеров, поставщиков,<br>
-дистрибьюторов, производителей)</span></span>
-            <span class="cols">Информационная поддержка Вашей службы безопасности</span>
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Проверка контрагентов (партнеров, поставщиков,<br>
+                        дистрибьюторов, производителей)</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Информационная поддержка Вашей службы безопасности</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
+
+
         </div>
 
         <div class="rows">
-            <span class="cols"><span>Мониторинг информационного фона лица или компании</span></span>
-            <span class="coll"></span>
+            <div class="boroda">
+                <span class="cols pynkt">
+                    <span>Мониторинг информационного фона лица или компании</span></span>
+                <div class="coll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident
+                    <a href="#">
+                        <div class="articles-pod-text" style="line-height: 16px;margin: 14px 0 22px 0;">Подробнее</div>
+                    </a>
+                </div>
+            </div>
+
+
+            <span class="coll-hide"></span>
         </div>
     </div>
 </div>
