--- a/src/sass/zdev_5.scss
+++ b/src/sass/zdev_5.scss
@@ -37,6 +37,7 @@
 .add_otz {
   width: 195px;
   height: 42px;
+
   border: 2px solid #9d0817;
   text-align: center;
   color: #9d0817;
@@ -45,7 +46,7 @@
   background-color: transparent;
   display: inline-block;
   text-decoration: none;
-  line-height: 42px;margin: 0 15px;
+  line-height: 42px;margin: 15px 15px;
 }
 .add_otz:hover {
   color: #ffffff;
