--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,13 +15,23 @@
 
     <div class="menu wrapper">
         <div class="logo col_1_3 menu-item"><a href="index.html"><img src="images/logo.png" alt="logo"></a></div>
+        <!--<div class="menu-text col_2_3 menu-item">-->
+            <!--<div><a href="index.html" class="menu-a">Главная</a></div>-->
+            <!--<div><a href="about.html" class="menu-a">О компании</a></div>-->
+            <!--<div><a href="yslygi.html" class="menu-a">Услуги</a></div>-->
+            <!--<div><a href="otziv.html" class="menu-a">Отзывы</a></div>-->
+            <!--<div><a href="articles.html" class="menu-a">Статьи</a></div>-->
+            <!--<div><a href="map.html" class="menu-a">Контакты</a></div>-->
+        <!--</div>-->
         <div class="menu-text col_2_3 menu-item">
-            <div><a href="index.html" class="menu-a">Главная</a></div>
-            <div><a href="about.html" class="menu-a">О компании</a></div>
-            <div><a href="yslygi.html" class="menu-a">Услуги</a></div>
-            <div><a href="otziv.html" class="menu-a">Отзывы</a></div>
-            <div><a href="articles.html" class="menu-a">Статьи</a></div>
-            <div><a href="map.html" class="menu-a">Контакты</a></div>
+            <ul class="menue">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="about.html">О компании</a></li>
+                <li><a href="yslygi.html">Услуги</a></li>
+                <li><a href="otziv.html">Отзывы</a></li>
+                <li><a href="articles.html">Статьи</a></li>
+                <li><a href="map.html">Контакты</a></li>
+            </ul>
         </div>
     </div>
 
