--- a/src/partials/main-body.html
+++ b/src/partials/main-body.html
@@ -18,14 +18,14 @@
                             органах и взаимодействие с ними</li>
                     </ul>
                 </div>
-                <div class="price" style="padding-top: 16px;margin-top: 27px;">
+                <div class="price">
                     <span>От <b>5 000</b> рублей</span>
                 </div>
             </div>
             <div class="service-col">
-                <div class="pod-text">
-                    <div class="service-text">менеджер по безопасности</div>
-                </div>
+                <span class="pod-text">
+                    <span class="service-text">менеджер по безопасности</span>
+                </span>
                 <div class="spisok">
                     <ul>
                         <li style="padding-top: 16px;">Обеспечение юридической и экономической
@@ -34,7 +34,7 @@
                             юридических лиц в режиме 24/7</li>
                     </ul>
                 </div>
-                <div class="price" style="margin-top: 26px; padding-top: 16px; padding-right: 3px;">
+                <div class="price">
                     <span>От <b>10 000</b> рублей</span>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                             или компании</li>
                     </ul>
                 </div>
-                <div class="price" style="padding-right: 3px; margin-top: 27px;">
+                <div class="price">
                     <span>От <b>3 000</b> рублей</span>
                 </div>
             </div>
@@ -70,16 +70,18 @@
                 <div class="girl"><img src="images/girl.png" alt="girl"></div>
             </div>
             <div class="col_1_2 questions-item anketa">
+                <div class="ostalis">Остались вопросы?</div>
+                <div class="zapolnite">Заполните поля ниже и мы свяжемся с Вами
+                    <span>в ближайшее время</span></div>
+
                 <form action="ajax-programer.php" id="form-one" class="form-zakaz">
-                    <div class="ostalis">Остались вопросы?</div>
-                    <div class="zapolnite">Заполните поля ниже и мы свяжемся с Вами
-                        <span>в ближайшее время</span></div>
+
 
                     <div class="form-row ic-name">
                         <input type="text" id="enter_name" name="contact_name" required="required" placeholder="Имя">
                     </div>
                     <div class="form-row ic-phone">
-                        <input type="text" id="enter_phone" class="tel-mask" name="contact_tel" required="required" placeholder="Телефон">
+                        <input type="text" placeholder="Телефон" id="enter_phone" class="tel-mask" name="contact_tel" required="required">
                     </div>
                     <div class="form-row">
                         <button class="send">оправить заявку</button>
