--- a/src/sass/zdev_2.scss
+++ b/src/sass/zdev_2.scss
@@ -307,7 +307,7 @@ display: flex;
   font-weight: 500;  font-size: 18px;
   color: #000000;
   width: 555px;
-  height: 120px;
+  min-height: 120px;
   line-height: 24px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.18);
   display: inline-block;
@@ -326,7 +326,7 @@ display: flex;
   box-shadow: none;
   background-color: #9d0817;
   width: 555px;
-  height: 120px;
+  min-height: 120px;
 }
 
 .yslygi-zagolovok {
@@ -362,6 +362,13 @@ display: flex;
   .coll-hide {width: 340px;}
   .coll {width: 340px;}
   .cols:hover {width: 340px;}
+}
+
+@media screen and (max-width: 370px){
+  .cols {width: 290px;}
+  .coll-hide {width: 290px;}
+  .coll {width: 290px;}
+  .cols:hover {width: 290px;}
 }
 
 
